-
Bug
-
Resolution: Done
-
P2: Important
-
5.3.1
-
None
-
Qt 4.8.1 on Kubuntu 12.04.4
-
185348e9ebaeac83a4ec98950605a4ecdd90e755
Using latest QtSerialPort from gitorious with Qt 4.8.1 on Kubuntu 12.04.4 in our project.
Opening QFileDialog (static standard dialogs) crashes the application with a segfault. The backtrace indicates that, for some reason, the native file dialog KFileDialog makes some call to QtSerialPort and it crashes in udev_new.
To verify, I created a small sample program (attached). Opening a QFileDialog without linking QtSerialPort works fine. Adding QSerialPort (here: enumerating devices) and it crashes.
Works fine on Ubuntu 12.04.4 with Qt 4.8.1 and latest QtSerialPort (runs unity, not KDE).
In the attachment you will find the example project, a back-trace, strace and ltrace
For Gerrit Dashboard: QTBUG-40113 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
95895,1 | Fix segfault related to dynamic udev loading | 5.3.2 | qt/qtserialport | Status: ABANDONED | 0 | 0 |
95900,3 | Fix segfault related to dynamic udev loading | 5.3 | qt/qtserialport | Status: MERGED | +2 | 0 |